--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,8 +1,9 @@
 .modal-backdrop {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
+    overflow-y: unset;
     background: #252424cc;
-    height: 100%;
+    height: 200vw;
     width: 100vw;
   }
